--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-query": "^1.2.9",
+    "axios": "^1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer": "^2.3.0",
@@ -23,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "typescript": "4.9.5"
   },
